WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279395
CSS flex shorthand should not eagerly evaluate calc()
https://bugs.webkit.org/show_bug.cgi?id=279395
Summary
CSS flex shorthand should not eagerly evaluate calc()
Sam Weinig
Reported
2024-09-09 16:43:31 PDT
CSS flex shorthand should not eagerly evaluate calc()
Attachments
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2024-09-09 17:05:05 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33352
EWS
Comment 2
2024-09-10 13:08:50 PDT
Committed
283437@main
(3907a512dae0): <
https://commits.webkit.org/283437@main
> Reviewed commits have been landed. Closing PR #33352 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-09-10 13:09:28 PDT
<
rdar://problem/135742940
>
EWS
Comment 4
2024-09-20 11:47:45 PDT
Committed
283286.107@safari-7620-branch
(57c555159fae): <
https://commits.webkit.org/283286.107@safari-7620-branch
> Reviewed commits have been landed. Closing PR #1864 and removing active labels.
Sammy Gill
Comment 5
2025-03-19 09:46:01 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/51457
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug