CSS flex shorthand should not eagerly evaluate calc() https://bugs.webkit.org/show_bug.cgi?id=279395

Reviewed by Tim Nguyen.

Replaces eager evaluation of calc() in CSS flex shorthand consumer with
storing the primitive value for resolution at style building time.

* LayoutTests/fast/css/flex-calculated-value-expected.txt:
* LayoutTests/fast/css/flex-calculated-value.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-flexbox/parsing/flex-computed-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-flexbox/parsing/flex-computed.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-flexbox/parsing/flex-invalid-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-flexbox/parsing/flex-invalid.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-flexbox/parsing/flex-valid-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-flexbox/parsing/flex-valid.html:
    - Updates tests with calc() cases and new results.

* Source/WebCore/css/parser/CSSPropertyParser.cpp:
    - Replace consumeNumberRaw with consumeNumber.

* Source/WebCore/css/parser/CSSPropertyParserHelpers.cpp:
* Source/WebCore/css/parser/CSSPropertyParserHelpers.h:
    - Move isFlexBasis helper to be a lambda in CSSPropertyParser::consumeFlex, its only caller.

Canonical link: https://commits.webkit.org/283437@main